logs/errors.log
2025-11-04 02:51:44,637 ERROR Internal Server Error: /news/ C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\utils\log.py (<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError('{% extends "default.html" %} must be the first tag in \'news/post_list.html\'.'), <traceback object at 0x00000215A5E6F6C0>)
Traceback (most recent call last):
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 519, in parse
    self.extend_nodelist(nodelist, compiled_result, token)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 540, in extend_nodelist
    raise self.error(
    ...<2 lines>...
    )
django.template.exceptions.TemplateSyntaxError: {% extends "default.html" %} must be the first tag in 'news/post_list.html'.
2025-11-04 02:51:44,640 ERROR "GET /news/ HTTP/1.1" 500 149520 C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\servers\basehttp.py None
2025-11-04 02:52:28,888 ERROR Internal Server Error: /news/ C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\utils\log.py (<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError("Invalid block tag on line 68: 'timezone_names'. Did you forget to register or load this tag?"), <traceback object at 0x00000215A5DB7DC0>)
Traceback (most recent call last):
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'timezone_names'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\response.py", line 92, in rendered_content
    return template.render(context, self._request)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\backends\django.py", line 107, in render
    return self.template.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 171, in render
    return self._render(context)
           ~~~~~~~~~~~~^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 163, in _render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 1016, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 977, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loader_tags.py", line 134, in render
    compiled_parent = self.get_parent(context)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loader_tags.py", line 131, in get_parent
    return self.find_template(parent, context)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loader_tags.py", line 109, in find_template
    template, origin = context.template.engine.find_template(
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        template_name,
        ^^^^^^^^^^^^^^
        skip=history,
        ^^^^^^^^^^^^^
    )
    ^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\template\base.py", line 577, in invalid_block_tag
    raise self.error(
    ...<3 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 68: 'timezone_names'. Did you forget to register or load this tag?
2025-11-04 02:52:28,890 ERROR "GET /news/ HTTP/1.1" 500 216710 C:\Skillfactory\Projects\newsportal\venv\Lib\site-packages\django\core\servers\basehttp.py None
